Fixed toggle on mobile and styling cleanup
https://app.productive.io/2650-4site-interactive-studios-inc/tasks/task/1096327?filter=eyJpZCI6IjMxOTIiLCJzb3J0QnkiOiJkdWUtZGF0ZSIsImdyb3VwQnkiOm51bGwsImNvbHVtbnMiOiJ0aXRsZSxwcm9qZWN0LHRhc2stbGlzdCxkdWUtZGF0ZSx0b2RvcyxyZW1haW5pbmctdGltZSx3b3JrZmxvdy1zdGF0dXMiLCJjb2x1bW5TZXR0aW5ncyI6e30sImZvcm11bGFzIjp7fSwidHJhbnNwb3NlQnkiOm51bGwsImxheW91dElkIjoiMTAyIiwicmVwb3J0TGF5b3V0SWQiOm51bGwsImNoYXJ0VHlwZUlkIjpudWxsLCJhc3NpZ25lZV9pZCI6eyJlcSI6WyIzMjUxMCJdfSwid29ya2Zsb3dfc3RhdHVzX2NhdGVnb3J5X2lkIjp7ImVxIjpbIjEiLCIyIl19fQ%3D%3D&taskActivityId=76804626

--- a/src/style.scss
+++ b/src/style.scss
@@ -176,10 +176,14 @@ Miscellaneous Pages (To Be Deleted After Development)
     transform: rotate(0deg);
   }
 
-  .section-paragraph {
+  .less-emails-section .section-paragraph,
+  .graphic-imagery-section .section-paragraph {
     padding: 0;
-    overflow: hidden;
-    transition: 0.5s;
+  }
+
+  .less-emails-section .section-paragraph,
+  .graphic-imagery-section .section-paragraph {
+    margin-bottom: 24px;
   }
 
   .hide-paragraph-animation {
@@ -290,7 +294,7 @@ form[action="/page/52319/subscriptions/2"] .less-emails-button {
 
   .graphic-slider {
     cursor: pointer;
-    margin-top: 16px;
+    // margin-top: 16px;
   }
 
   .graphic-slider rect {
@@ -640,7 +644,6 @@ form[action="/page/52319/subscriptions/2"] .less-emails-button {
 
     .section-paragraph {
       height: 100%;
-      margin-bottom: 24px;
       animation: none;
     }
 
